# dilix

./: .gitignore  AppShell_dark.tsx  AppShell_updated.tsx  Makefile  README.md  STATUS.md  _MediaEditor.tsx  _StickerLibrary.tsx  _StoryBar.tsx  _StoryViewer.tsx  _api.ts  _e2e_sticker_msg.py  _e2e_stickers.py  _earth.tsx  _global-error.tsx  _layout.tsx  _messages_model.py  _messages_page.tsx  _messages_router.py  _onboarding.tsx  _profile.tsx  _stickers_model.py  _stickers_router.py  _stories_e2e.py  _stories_model.py  _stories_router.py  _user_model.py  ai_real.tsx  ai_router.py  api_real.ts  chat_page.tsx  chat_page_v2.tsx  dashboard_v2.tsx  dilix-presentation.html  earth_v4.tsx  earth_v5.tsx  earth_v6.tsx  earth_v7.tsx  freight_model.py  freight_page_v2.tsx  (+20 more)
backend/libs/shared/: pyproject.toml
backend/libs/shared/dilix_shared/: __init__.py  adapter.py  earth_id.py  errors.py  events.py
backend/services/ai/: .env.example  Dockerfile  pyproject.toml
backend/services/ai/app/: __init__.py  agents.py  config.py  llm.py  main.py  mcp.py  schemas.py  supervisor.py
backend/services/ai/tests/: test_invoke.py
backend/services/core/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/services/core/alembic/: env.py
backend/services/core/alembic/versions/: 0001_initial_baseline.py  0002_stickers_stories.py
backend/services/core/app/: main.py  worker.py
backend/services/core/app/core/: broker.py  config.py  database.py  events.py  i18n.py  observability.py  outbox.py  relay.py  security.py
backend/services/core/app/modules/ai/: models.py  (+4 more)
backend/services/core/tests/: _harness.py  conftest.py  test_ai_integration.py  test_auth_social.py  test_authorization_unit.py  test_carrier.py  test_discovery_integration.py  test_earth_integration.py  test_freight_integration.py  test_gamification_integration.py  test_growth_integration.py  test_identity_integration.py  test_insurance.py  test_investment_integration.py  test_kyc_integration.py  test_m3.py  test_m4.py  test_m5.py  test_marketplace_integration.py  test_membership_integration.py  test_messaging_integration.py  test_notification_integration.py  test_payments.py  test_payments_integration.py  test_provider_integration.py  test_realtime_webrtc.py  test_referral_integration.py  test_reputation_integration.py  test_saman.py  test_social_reels_integration.py  test_stickers.py  test_stickers_integration.py  test_stories.py  test_stories_integration.py  test_telecom_integration.py  test_unit.py
(+295 files in other folders)
