[project]
name = "dilix-shared"
version = "0.1.0"
description = "Dilix Shared Kernel — Earth ID, domain events, errors"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dilix_shared"]
