[project]
name = "dilix-ai-service"
version = "0.1.0"
description = "Dilix AI Service — LangGraph Supervisor + specialist agents + MCP tool layer (سند ۸)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
# پیاده‌سازیِ کاملِ گراف با LangGraph (در production نصب می‌شود؛ سرویس بدونِ آن هم با
# Supervisorِ داخلی کار می‌کند تا قراردادِ HTTP پایدار بماند).
langgraph = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
