[project]
name = "dilix-core"
version = "0.1.0"
description = "Dilix Core Service — Earth ID, Auth, Authorization, Provider (Layer 0)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pyjwt>=2.9",
    "passlib[argon2]>=1.7",
    "email-validator>=2.2",
    "nats-py>=2.7",
    "httpx>=0.27",
    "dilix-shared",
    "pyotp>=2.9",
    "qrcode>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.7",
]

[tool.uv.sources]
dilix-shared = { path = "../../libs/shared" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[project.optional-dependencies.mfa]
deps = ["pyotp>=2.9"]
